2012-01-11  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/Rule.hpp: Include guard fix.

	* m4/libcurl.m4: new upstream version from
	https://raw.github.com/bagder/curl/master/docs/libcurl/libcurl.m4
	* examples/tests/dlvhextests.test.in: Making dlvhextests.test a file built
	* examples/tests/dlvhextests.test: Likewise (remove).
	by configure.
	* configure.ac: Fixed some autoconf quoting warnings and replaced deprecated
	calls by other calls.

	* include/dlvhex/Interpretation.hpp: Added true-bit iteration interface.

	* include/dlvhex/ASPSolver.h: New method useInputProviderInput().
	* include/dlvhex/ASPSolverManager.h: Likewise.
	* src/dlvhex/ASPSolverManager.cpp: Likewise.
	* src/dlvhex/ASPSolver.cpp: Likewise.

	* include/dlvhex/Benchmarking.h: Mutex for profiling data.

	* include/dlvhex/ModelGenerator.hpp: Improved diagnosic messages.
	* src/dlvhex/WellfoundedModelGenerator.cpp: Likewise.
	* src/dlvhex/GuessAndCheckModelGenerator.cpp: Likewise.
	* src/dlvhex/DLVresultParserDriver.cpp: Likewise.
	* src/dlvhex/PlainModelGenerator.cpp: Likewise.

	* include/dlvhex/GraphvizHelpers.hpp: Improved graphviz escape functionality.
	* src/dlvhex/GraphvizHelpers.cpp: Likewise.

	* include/dlvhex/Configuration.hpp: New generic string options,
	methods getStringOption() and setStringOption().
	* src/dlvhex/Configuration.cpp: Likewise.

	* src/dlvhex/OrdinaryModelGenerator.cpp: Remove deprecated file.

	* include/dlvhex/EvalGraph.hpp: Dedicated evaluation graph graphviz
	printing functionality.

	Changed method of evaluation graph building: now evaluation units are
	created without modifying the component graph, this involves the
	following changes:
	* include/dlvhex/ComponentGraph.hpp: Made ComponentGraph clone()-able
	and deprecating collapseComponents() interface.
	* src/dlvhex/ComponentGraph.cpp: Likewise.
	* include/dlvhex/EvalGraphBuilder.hpp: New methods getComponentGraphRest()
	and calculateNewEvalUnitInfos() (previously in ComponentGraph in similar form)