@@ -22,7 +22,11 @@ EXTRA_DIST = \
     extatom2dup.hex \
     extatom2safety.hex \
     extatom3.hex \
-    extatom3_evalplan.txt \
+    extatom3_aspheur_faultya.asp \
+    extatom3_aspheur_faultyb.asp \
+    extatom3_aspheur_old.asp \
+    extatom3_evalplana.txt \
+    extatom3_evalplanb.txt \
     extatom4.hex \
     extatom5.hex \
     extatom6.hex \
@@ -131,6 +135,8 @@ EXTRA_DIST = \
     tests/extatom2.out \
     tests/extatom2dup.out \
     tests/extatom3.out \
+    tests/extatom3_faultya.stderr \
+    tests/extatom3_faultyb.stderr \
     tests/extatom4.out \
     tests/extatom5.out \
     tests/extatom6.out \
